// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Matches snapshot for all 1`] = `
<div>
  <form
    class="form"
    data-testid="form-all"
  >
    <div
      class="formDescription"
    >
      Хотите что-то сказать? Предложить идею или помочь с экспертизой? Стать героем выпуска, поделившись своей историей столкновения с хирургами? Мы внимательно прочтем ваше письмо и ответим, если заинтересуемся.
    </div>
    <p
      class="required"
    >
      * - обязательные поля
    </p>
    <label
      for="field-name"
    >
      <p
        class="formLabel"
      >
        Как вас зовут?
        <span
          class="required"
        >
          *
        </span>
      </p>
      <input
        data-testid="field-name"
        id="field-name"
        name="name"
        required=""
        type="text"
        value=""
      />
    </label>
    <label
      for="field-email"
    >
      <p
        class="formLabel"
      >
        Контактный e-mail
        <span
          class="required"
        >
          *
        </span>
      </p>
      <input
        data-testid="field-email"
        id="field-email"
        name="email"
        required=""
        type="email"
        value=""
      />
    </label>
    <label
      for="field-phone"
    >
      <p
        class="formLabel"
      >
        Телефон
        <span
          class="required"
        >
          *
        </span>
      </p>
      <input
        data-testid="field-phone"
        id="field-phone"
        name="phone"
        required=""
        type="tel"
        value=""
      />
    </label>
    <label
      for="field-messageall"
    >
      <p
        class="formLabel"
      >
        Ваша идея/предложение
        <span
          class="required"
        >
          *
        </span>
      </p>
      <textarea
        data-testid="field-messageall"
        id="field-messageall"
        name="messageall"
        required=""
      />
    </label>
    <label
      for="field-compliments"
    >
      <p
        class="formLabel"
      >
        Чем вам нравится Зелёнка?
      </p>
      <textarea
        data-testid="field-compliments"
        id="field-compliments"
        name="compliments"
      />
    </label>
    <label
      for="field-recommendations"
    >
      <p
        class="formLabel"
      >
        Что нам необходимо улучшить в своей работе?
      </p>
      <textarea
        data-testid="field-recommendations"
        id="field-recommendations"
        name="recommendations"
      />
    </label>
    <input
      data-testid="submit"
      type="submit"
      value="Отправить"
    />
  </form>
</div>
`;

exports[`Form Matches snapshot for partners 1`] = `
<div>
  <form
    class="form"
    data-testid="form-partners"
  >
    <div
      class="formDescription"
    >
      Если вы врач, представитель клиники или любой другой компании, связанной с медициной, мы можем сделать очередной выпуск вместе. Заполните анкету, и мы очень скоро свяжемся с вами.
    </div>
    <p
      class="required"
    >
      * - обязательные поля
    </p>
    <label
      for="field-name"
    >
      <p
        class="formLabel"
      >
        Как вас зовут?
        <span
          class="required"
        >
          *
        </span>
      </p>
      <input
        data-testid="field-name"
        id="field-name"
        name="name"
        required=""
        type="text"
        value=""
      />
    </label>
    <label
      for="field-email"
    >
      <p
        class="formLabel"
      >
        Контактный e-mail
        <span
          class="required"
        >
          *
        </span>
      </p>
      <input
        data-testid="field-email"
        id="field-email"
        name="email"
        required=""
        type="email"
        value=""
      />
    </label>
    <label
      for="field-phone"
    >
      <p
        class="formLabel"
      >
        Телефон
        <span
          class="required"
        >
          *
        </span>
      </p>
      <input
        data-testid="field-phone"
        id="field-phone"
        name="phone"
        required=""
        type="tel"
        value=""
      />
    </label>
    <label
      for="field-workplace"
    >
      <p
        class="formLabel"
      >
        Где вы работаете? Не забудьте адрес сайта.
        <span
          class="required"
        >
          *
        </span>
      </p>
      <input
        data-testid="field-workplace"
        id="field-workplace"
        name="workplace"
        required=""
        type="text"
        value=""
      />
    </label>
    <label
      for="field-message"
    >
      <p
        class="formLabel"
      >
        О чем вы хотели бы рассказать в Зелёнке?
        <span
          class="required"
        >
          *
        </span>
      </p>
      <textarea
        data-testid="field-message"
        id="field-message"
        name="message"
        required=""
      />
    </label>
    <label
      for="field-money"
    >
      <p
        class="formLabel"
      >
        Сколько денег вы готовы потратить на спонсорский выпуск?
      </p>
      <input
        data-testid="field-money"
        id="field-money"
        name="money"
        type="text"
        value=""
      />
    </label>
    <label
      for="field-startDate"
    >
      <p
        class="formLabel"
      >
        Когда хотите начать?
      </p>
      <input
        data-testid="field-startDate"
        id="field-startDate"
        name="startDate"
        type="text"
        value=""
      />
    </label>
    <input
      data-testid="submit"
      type="submit"
      value="Отправить"
    />
  </form>
</div>
`;
